k8s/base/event-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: ticket-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: kwonjunyeol/event-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8082
              initialDelaySeconds: 40
              periodSeconds: 15
              timeoutSeconds: 3
              failureThreshold: 3
