k8s/base/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ticket-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: kwonjunyeol/payment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8089
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8089
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
