k8s/base/redpanda-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
  namespace: ticket-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
        - name: redpanda
          image: docker.redpanda.com/redpandadata/redpanda:v24.1.2
          args:
            - redpanda
            - start
            - --overprovisioned
            - --smp
            - "1"
            - --memory
            - 512M
            - --reserve-memory
            - 0M
            - --check=false
            - --node-id
            - "0"
            - --kafka-addr
            - PLAINTEXT://0.0.0.0:9092
            - --advertise-kafka-addr
            - PLAINTEXT://redpanda:9092
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
