k8s/base/reservation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
  namespace: ticket-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: kwonjunyeol/reservation-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8087
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8087
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8087
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
