k8s/base/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: ticket-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: kwonjunyeol/user-service:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8081
              initialDelaySeconds: 40
              periodSeconds: 15
              timeoutSeconds: 3
              failureThreshold: 3
              #trigger cd
