k8s/base/event-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: ticket-dev
  labels:
    app: event-service
spec:
  selector:
    app: event-service
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
