k8s/base/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: ticket-dev
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: ClusterIP
