k8s/base/redpanda-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: ticket-dev
spec:
  selector:
    app: redpanda
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
  type: ClusterIP
