k8s/base/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ticket-dev
spec:
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
