k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-platform-ingress
  namespace: ticket-dev
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081

          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8082

          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 8087

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8089

          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8088
